parser/src/test/resources/corpus/invalid/18_let_missing_eq.ff
rule "Let Missing Eq" {
  let x 1.5%
}
